# binal1

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  binal.cabal
Executable/: binal.hs
Language/: Binal.hs
Language/Binal/: CLI.hs  Generator.hs  Optimizer.hs  Parser.hs  PrettyPrint.hs  REPL.hs  StyleGuidance.hs  Types.hs  Util.hs  Verifier.hs
Language/Binal/Generator/: Simple.hs  Types.hs  Util.hs
Language/Binal/Util/: AST.hs  Constants.hs  Gen.hs  LitKind.hs  TyKind.hs  TypedAST.hs
examples/: calcs.binal  calcs.binali  calcs.js  hello.binal
examples/commits-with-vue/: README.md  app.binal  ffi.js  index.html
runtime/: binal.js
test/: foldl.binal  rev.binal  rev.binali  string.binal  string.binali
